mix i31 + struct types

--- a/wasm_examples/Makefile
+++ b/wasm_examples/Makefile
@@ -2,6 +2,7 @@ all: run-add
 
 %.wasm: %.wat
 	wasm-tools parse -o $@  $<
+	wasm-tools validate --features all $<
 
 run-add: add.wasm
 	@echo "Running add.{js, wasm} with node (needs node >= 22)..."
