--- a/evaluation/Makefile
+++ b/evaluation/Makefile
@@ -22,3 +22,6 @@ latest-O2:
 # no difference with wasm-opt 117
 #latest-O2-noinline-memgrow:
 #	./benchmark.py --folder ${LATEST} --engine ${ENGINE} --wasm-opt --no-inline=grow_mem_if_necessary --wasm-opt -O2
+
+wasmgc-best:
+	./benchmark.py --folder ./binaries/non-cps-wasmgc-may-16-24/ --engine node --wasm-opt -O2 --wasmgc-cast-nochecks
