--- a/wasm_examples/Makefile
+++ b/wasm_examples/Makefile
@@ -6,7 +6,8 @@ all: run-add
 
 run-add: add.wasm
 	@echo "Running add.{js, wasm} with node (needs node >= 22)..."
-	@node --experimental-wasm-typed_funcref --experimental-wasm-return-call --experimental-wasm-gc add.js
+#	@node --experimental-wasm-typed_funcref --experimental-wasm-return-call --experimental-wasm-gc add.js
+	@node add.js
 
 clean:
 	rm -r *.wasm
