--- a/demo_website_sha256/Makefile
+++ b/demo_website_sha256/Makefile
@@ -35,4 +35,6 @@ clean:
 		hyphen-data \
 		MEIPreload \
 		Last\ Version \
-		Safe\ Browsing
+		Safe\ Browsing \
+		BrowserMetrics-spare.pma \
+		component_crx_cache
