add coq sources for website js demo (from other repo)
also:
- bring up to date
- cleanup

--- a/demo_website_sha256/Makefile
+++ b/demo_website_sha256/Makefile
@@ -2,39 +2,4 @@ develop:
 	chromium --disable-web-security --user-data-dir=. certicoqwasm-demo.html
 
 clean:
-	rm -rf Default \
-	    Dictionaries \
-		BrowserMetrics \
-		OnDeviceHeadSuggestModel \
-		segmentation_platform \
-		Local\ State \
-		GraphiteDawnCache \
-		CertificateRevocation \
-		Last Version \
-		FileTypePolicies \
-		Subresource\ Filter\
-		PrivacySandboxAttestationsPreloaded \
-		SafetyTips \
-		Crowd\ Deny \
-		PKIMetadata \
-		FirstPartySetsPreloaded \
-		ZxcvbnData \
-		OptimizationHints \
-		first_party_sets.db \
-		ShaderCache \
-		TpcdMetadata \
-		TrustTokenKeyCommitments \
-		AutofillStates \
-		OriginTrials \
-		Variations \
-		NativeMessagingHosts \
-		First\ Run \
-		first_party_sets.db-journal \
-		GrShaderCache \
-		SSLErrorAssistant \
-		hyphen-data \
-		MEIPreload \
-		Last\ Version \
-		Safe\ Browsing \
-		BrowserMetrics-spare.pma \
-		component_crx_cache
+	python3 cleanup.py
