--- a/demo_website_sha256/coq/Makefile
+++ b/demo_website_sha256/coq/Makefile
@@ -2,6 +2,7 @@ all: Makefile.coq
 	@make -C lib
 	@+$(MAKE) -f Makefile.coq all
 
+# copies Wasm binary so it's used by local chromium demo
 install: all
 	wasm-opt --enable-tail-call -O2 ./Demo.sha256_webdemo.sha_fast.wasm -o ./Demo.sha256_webdemo.sha_fast_O2.wasm
 	cp ./Demo.sha256_webdemo.sha_fast_O2.wasm ../files/certicoqwasm-demo/sha_fast.wasm
@@ -10,7 +11,7 @@ install: all
 clean: Makefile.coq
 	@+$(MAKE) -f Makefile.coq cleanall
 	@rm -f Makefile.coq Makefile.coq.conf
-	@rm -f Demo.sha256_webdemo.sha_fast.wasm Demo.sha256_webdemo.sha_fast.ir
+	@rm -f *.wasm *.wat *.ir
 
 Makefile.coq: _CoqProject
 	$(COQBIN)coq_makefile -f _CoqProject -o Makefile.coq
